add images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -32,18 +32,29 @@
     <div class="fullscreen-image">
         <img src="css/images/acrylics.png" alt="Acrylics image" class="full-page-image">
         <h1>Gallery</h1>
-        <p>Explore my collection of beautiful artwork.</p>
+        <p></p>
         
         <div class="gallery-grid">
             <div class="gallery-item">
                 <img src="css/images/pinkflowersinvase.png" alt="Pink Flowers in Vase" class="gallery-image">
                 <h3>Pink Flowers in Vase</h3>
+                <h4>(acrylic)</h4>
             </div>
             <div class="gallery-item">
                 <img src="css/images/splashofcolour.png" alt="Splash of Colour" class="gallery-image">
                 <h3>Splash of Colour</h3>
+                <h4>(acrylic)</h4>
             </div>
-            <!-- Add more gallery items here as needed -->
+            <div class="gallery-item">
+                <img src="css/images/comesthebird2.png" alt="Comes the Bird" class="gallery-image">
+                <h3>Comes the Bird 2</h3>
+                <h4>(pastel)</h4>
+            </div>
+            <div class="gallery-item">
+                <img src="css/images/westonpier.PNG" alt="Weston Pier" class="gallery-image">
+                <h3>Weston Pier and clock, Summer</h3>
+                <h4>(pastel)</h4>
+            </div>
         </div>
     </div>
 
