--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     <p>She is fascinated by the way in which light, the seasons and the 
       changing moods and internal stances of the viewer imbue the 
       ordinary with something akin to mystery. Her work explores the
-      transcendent within the everyday and is influenced by the 'visionary' 
-      tradition; from Samuel Palmer to David Blackburn.</p>
+      transcendent within the everyday and is influenced by the 'visionary' tradition; from Samuel Palmer to David Blackburn.</p>
     <p>All her works are about place, time and light, and that which lies 
       always at the threshold of consciousness. Each painting is a glimpse 
       of another reality; always there, but often unnoticed.</p>
