stick nav bar to top of screen on home page and gallery, even when scrolling

--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
             </div>
             <div class="gallery-item">
                 <img src="css/images/westonpier.PNG" alt="Weston Pier" class="gallery-image">
-                <h3>Weston Pier and clock, Summer</h3>
+                <h3>Weston Pier and Clock, Summer</h3>
                 <h4>(pastel)</h4>
             </div>
         </div>
