add more images to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -55,6 +55,16 @@
                 <h3>Weston Pier and Clock, Summer</h3>
                 <h4>(pastel)</h4>
             </div>
+            <div class="gallery-item">
+                <img src="css/images/comesthebirdflurried.PNG" alt="Comes the Bird Flurried" class="gallery-image">
+                <h3>Comes the Bird, Flurried at Full Moon</h3>
+                <h4>(pastel)</h4>
+            </div>
+            <div class="gallery-item">
+                <img src="css/images/washingday.PNG" alt="Washing Day" class="gallery-image">
+                <h3>Washing Day</h3>
+                <h4>(pastel)</h4>
+            </div>
         </div>
     </div>
 
