amend image names from PNG to png

--- a/gallery.html
+++ b/gallery.html
@@ -51,17 +51,17 @@
                 <h4>(pastel)</h4>
             </div>
             <div class="gallery-item">
-                <img src="css/images/westonpier.PNG" alt="Weston Pier" class="gallery-image">
+                <img src="css/images/westonpier.png" alt="Weston Pier" class="gallery-image">
                 <h3>Weston Pier and Clock, Summer</h3>
                 <h4>(pastel)</h4>
             </div>
             <div class="gallery-item">
-                <img src="css/images/comesthebirdflurried.PNG" alt="Comes the Bird Flurried" class="gallery-image">
+                <img src="css/images/comesthebirdflurried.png" alt="Comes the Bird Flurried" class="gallery-image">
                 <h3>Comes the Bird, Flurried at Full Moon</h3>
                 <h4>(pastel)</h4>
             </div>
             <div class="gallery-item">
-                <img src="css/images/washingday.PNG" alt="Washing Day" class="gallery-image">
+                <img src="css/images/washingday.png" alt="Washing Day" class="gallery-image">
                 <h3>Washing Day</h3>
                 <h4>(pastel)</h4>
             </div>
