--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         
         <div class="side-image right-image">
-            <img src="css/images/westonpier.PNG" alt="Weston Pier" class="side-painting">
+            <img src="css/images/westonpier.png" alt="Weston Pier" class="side-painting">
         </div>
     </div>
     </div>
