--- a/gallery.html
+++ b/gallery.html
@@ -28,10 +28,12 @@
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
         </button>
         
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About the Artist</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
